kubernetes/charts/traefik/dashboard/004-traefik-ingress-internal.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.homelab.lan`)
      kind: Rule
      # middlewares:
      #   - name: traefik-dashboard-basicauth
      #     namespace: traefik
      services:
        - name: api@internal
          kind: TraefikService
